--- a/docs/write_up/JDM_mixed_fishery_letter.tex
+++ b/docs/write_up/JDM_mixed_fishery_letter.tex
@@ -12,6 +12,7 @@
 \usepackage{graphicx}
 \usepackage[]{changes}
 \definechangesauthor[color = red]{coilin}
+\definechangesauthor[color = blue]{Paul}
 % cite is loaded from nature class
 \setlist{itemsep=1pt} % This controls spacing between items in the lists
 \setlength\parindent{0pt} % Removes all indentation from paragraphs
@@ -116,45 +117,46 @@ counted against the respective stock quota\deleted{; second, by 2020 all fish
 	(MSY)\cite{EuropeanParliamentandCounciloftheEuropeanUnion2013}. The
 	changes are}\deleted[id = coilin]{, expected to contribute to
 	attainment of the goal of Good Environmental Status (GES) under the
-	European Marine Strategy Framework Directive (MSFD;
-	\cite{EuropeanParliament2008}) and move Europe towards an ecosystem
-	based approach to fisheries management \cite{Garcia2003}}. 
+	European Marine Strategy Framework Directive
+	(MSFD;\cite{EuropeanParliament2008}) and move Europe towards an
+	ecosystem based approach to fisheries management \cite{Garcia2003}}. 
 
 \deleted{Societal objectives for fisheries to achieve MSY across ecosystem
-	components are paralleled by} Individual fishers goals \added[id = coilin]{are to} maximise
-utility; whether that be profit, income or the continuance of traditional
-practices.  \deleted{Under the new policy,} Unless fishers can avoid catch of
-unwanted species they will have to stop fishing when reaching their first
-restrictive quota. This introduces a potential significant cost to fishers of
-under-utilised quota\cite{Ulrich2016} and provides a strong
-incentive to mitigate such losses \cite{Condie2013}. The ability
-of fishers to align their catch with available quota depends on being able to
-exploit target species while avoiding unwanted catch,\deleted{ Methods by which
-	fishers can alter their fishing patterns include} either by switching
-fishing method (e.g.  trawling to netting), changing technical gear
-characteristics (e.g.  introducing escapement panels in nets), or the timing
-and location of fishing activity \cite{vanPutten2012a}. For
-example, otter trawl gears are known to have higher catch rates of roundfish
-due to the higher headline and wider sweeps which herd demersal fish into the
-net while beam trawls employ chain mesh to \replaced[id = coilin]{lift}{'dig'} benthic flatfish species from
-the seabed\cite{Fraser2008}.
+	components are paralleled by} Individual fishers goals \added[id =
+coilin]{are to} maximise utility; whether that be profit, income or the
+continuance of traditional ractices.  \deleted{Under the new policy,} Unless
+fishers can avoid catch of unwanted species they will have to stop fishing when
+reaching their first restrictive quota. This introduces a potential significant
+cost to fishers of under-utilised quota\cite{Ulrich2016} and provides a strong
+incentive to mitigate such losses\cite{Condie2013}. The ability of fishers to
+align their catch with available quota depends on being able to exploit target
+species while avoiding unwanted catch,\deleted{ Methods by which fishers can
+	alter their fishing patterns include} either by switching fishing
+method (e.g.  trawling to netting), changing technical gear characteristics
+(e.g.  introducing escapement panels in nets), or the timing and location of
+fishing activity\cite{vanPutten2012a}. For example, otter trawl gears are known
+to have higher catch rates of roundfish due to the higher headline and wider
+sweeps which herd demersal fish into the net while beam trawls employ chain
+mesh to \replaced[id = coilin]{lift}{'dig'} benthic flatfish species from the
+seabed\cite{Fraser2008}.
 
 Spatiotemporal management measures \deleted{(such as time-limited fishery
 	closures)} have been applied to reduce unwanted catch with varying
-degrees of success (e.g.  \cite{Needle2011, Dunn2014a}.  However, such measures
-have \deleted{generally} been targeted at individual species without considering
-associations and interactions among several species. Highly mixed fisheries are
-complex with spatial, technological and community interactions combining.
-\deleted{The design of spatio-temporal management measures which aim to allow
-	exploitation of high quota stocks while protecting low quota stocks
-	requires understanding of these interactions at a scale meaningful to
-	managers and fishers}. \deleted{Here,} Our goal is to develop a framework
-for understanding these complexities. We do so by implementing a
-spatio-temporal dimension reduction method and use the results to draw
-inference on the fishery-community dynamics, creating a framework to identify
-trends common among species-groups. We use this to describe \replaced[id = coilin]{the potential for and limitations of}{where} spatial
-measures \replaced[id = coilin]{for}{can contribute to} mitigating unwanted catches in highly mixed
-fisheries.
+degrees of success (e.g.\cite{Needle2011, Dunn2014a}).  However, such measures
+have \deleted{generally} been targeted at individual species without
+considering associations and interactions among several species. Highly mixed
+fisheries are complex with spatial, technological and community interactions
+combining.  \deleted{The design of spatio-temporal management measures which
+	aim to allow exploitation of high quota stocks while protecting low
+	quota stocks requires understanding of these interactions at a scale
+	meaningful to managers and fishers}. \deleted{Here,} Our goal is to
+develop a framework for understanding these complexities. We do so by
+implementing a spatio-temporal dimension reduction method and use the results
+to draw inference on the fishery-community dynamics, creating a framework to
+identify trends common among species. We use this to describe
+\replaced[id = coilin]{the potential for and limitations of}{where} spatial
+measures \replaced[id = coilin]{to}{can contribute to} mitigate\deleted{ing}
+unwanted catches in highly mixed fisheries.
 
 
 \subsection{Framework for analysing spatio-temporal mixed fisheries
@@ -172,11 +174,11 @@ dynamics of the different species as a function of latent variables
 factors) for encounter probability and positive catch rates (\deleted{which we
 	call} 'positive density') separately \cite{Thorson2015a}.  \deleted{We
 	use} The resultant factor analysis is used to identify community
-dynamics and drivers common among 18 species-groups and results presented
+dynamics and drivers common among 18 species and results presented
 through \deleted{transformation of the loading matrices using} PCA rotation. By
-describing the species-groups dynamics through underlying contributory
+describing the species dynamics through underlying contributory
 spatiotemporal factors we can take account of how the factors contribute to
-affect catches of the species-groups in mixed fisheries. \deleted{We use} Gaussian
+affect catches of the species in mixed fisheries. \deleted{We use} Gaussian
 Markov Random Fields (GMRFs) \deleted{to} capture spatial and temporal dependence
 within and among species groups for both encounter probability and positive
 density\cite{Thorson2013}. \deleted{VAST is set in a mixed modelling framework to allow
@@ -220,22 +222,22 @@ catches of quota species under the EU landing obligation.}
 spatial dynamic factor analysis decomposes the dominant spatial patterns
 driving differences in encounter probability and positive density. The first
 three factors \deleted{(after PCA rotation)} account for 83.7\% of the between
-species-group variance in average encounter probability and 69\% of the
-between species-group variance in average positive density. A clear spatial
+species variance in average encounter probability and 69\% of the
+between species variance in average positive density. A clear spatial
 pattern can been seen both for encounter probability and positive density, with
 a positive value associated with the first factor in the inshore north easterly
 part of the Celtic Sea into the Bristol Channel and Western English Channel,
 moving to a negative value offshore in the south-westerly waters (Figure 1).
-The species-group loadings coefficients show plaice, sole and whiting to be
+The species loadings coefficients show plaice, sole and whiting to be
 positively associated with the first factor for encounter probability while the
-other species-groups are negatively associated. For average positive density,
+other species are negatively associated. For average positive density,
 positive associations are also found for haddock and juvenile cod. \deleted{This is
-indicative of a more inshore distribution for these species-groups.} 
+indicative of a more inshore distribution for these species.} 
 
 On the second spatial factor for encounter probability a north / south split
 can be seen at approximately 49$^{\circ}$ N while positive density is more
 driven by a positive value in the deeper westerly waters as well as some
-inshore areas. Species-group values for the second factor indicate there are
+inshore areas. Species values for the second factor indicate there are
 positive associations for juvenile monkfish (\emph{L. piscatorius}), juvenile
 hake, juvenile megrim, plaice and juvenile whiting with average positive
 density, which may reflect two different spatial distributions in the more
@@ -246,7 +248,7 @@ for encounter probability and negative with the westerly waters. This
 \deleted{manifests in the species associations as} splits\deleted{ting} the
 roundfish species cod, haddock and whiting which all have a positive
 association with the third factor for average encounter probability from the
-rest of the species-groups \deleted{which have a negative association}.
+rest of the species \deleted{which have a negative association}.
 Positive density is driven by a north / south split (Figure 1), with positive
 values in the northerly areas. Juvenile monkfish (\emph{L.  budgessa} and
 \emph{L. piscatorius}), cod, juvenile haddock, hake, adult plaice and whiting
@@ -271,7 +273,7 @@ with 62 \%, 35 \%, and 31 \% for each of the factors, respectively.}
 
 It is clear that depth and to a lesser extent substrate are important
 predictors for the main driver of similarities and differences in distributions
-and abundances for the different species-groups. \deleted{The first factor correlates
+and abundances for the different species. \deleted{The first factor correlates
 strongly with these variables, despite them not explicitly being incorporated
 in the model. While depth was incorporated as a covariate in an alternative
 model formulation (see Methods), it was found not to improve predictions. The
@@ -281,107 +283,115 @@ advantage to the approach taken here is that, where such data is unavailable at
 appropriate spatial resolution, the spatial factor analysis can adequately
 characterise these influences on species spatial dynamics.
 
-\subsection{Changes in spatial patterns over time, but stability in species
-	dynamics} \deleted{While there are clear spatial patterns in the factor
-	coefficients describing differences in average (over time) encounter
-	probability and positive density (Figure 1),} The inter-annual
-differences in factor coefficients show less structure (Figures S5, S6). These
-inter-annual differences are important as they reflect the ability of fishers
-to predict where they can target species from one year to the next, without
-which it may be difficult to avoid unwanted catch \added[id = coilin]{in close to real-time}. There were, however,
-\deleted{While spatio-temporal factor coefficients did not show consistent
-	trends from year to year across all species,} common patterns in
-spatiotemporal factor coefficients among species-groups \deleted{there were clear
-	relationships} (Figure 2).  The same factors \deleted{appear to} drive
-spatiotemporal distributions of megrim, anglerfish species and hake (the deeper
-water species, species-grouping negatively associated with the second axes of
-Figure 2a) and the roundfish and flatfish (species-grouping more positively
-associated with the second axes of Figure 2a). For spatio-temporal positive
-density (Figure 2b) cod, haddock and whiting (the roundfish species) are
-separated from plaice, sole (the flatfish) and deeper water species. \deleted{As
-	such,} From this it can be predicted that higher catches of a species
-within a group (e.g.  cod in roundfish) would be expected when catching another
-species within that group (e.g. whiting in roundfish), \deleted{. This} suggesting
-\deleted{that} one or more common environmental drivers are influencing the
-distributions of the species groups, and that driver differentially affects the
-species groups, but this could not be explained by temperature \deleted{is often
-	included as a covariate in species distribution models, but was found
-	not to contribute to the variance in the first factor values} (Figure
-S6, no correlations found for either encounter probability or positive
-density).
+\subsection{\replaced[id = Paul]{Time varying species distributions, but stability
+		within species groups}{Changes in spatial patterns over time,
+		but stability in species dynamics}} \deleted{While there are
+	clear spatial patterns in the factor coefficients describing
+	differences in average (over time) encounter probability and positive
+	density (Figure 1),} The inter-annual differences in factor
+coefficients show less structure (Figures S5, S6). These inter-annual
+differences are important as they reflect the ability of fishers to predict
+where they can target species from one year to the next\deleted{, without which it may
+be difficult to avoid unwanted catch}. \deleted{There were, however, While spatio-temporal factor
+	coefficients did not show consistent trends from year to year across
+	all species,} Common patterns in spatiotemporal factor coefficients
+among species \deleted{there were clear relationships (Figure 2)} \deleted{.  The
+same factors appear to} drive spatiotemporal distributions of megrim,
+anglerfish species and hake (the deeper water species, species-group
+negatively associated with the second axes of Figure 2a) and the roundfish and
+flatfish (species-group more positively associated with the second axes of
+Figure 2a). For spatio-temporal positive density (Figure 2b) cod, haddock and
+whiting (the roundfish species) are separated from plaice, sole (the flatfish)
+and deeper water species. \deleted{As such,} From this it can be predicted that
+higher catches of a species within a group (e.g.  cod in roundfish) would be
+expected when catching another species within that group (e.g. whiting in
+roundfish), \deleted{. This} suggesting \deleted{that} one or more common
+environmental drivers are influencing the distributions of the species groups,
+and that driver differentially affects the species groups, but this could not
+be explained by temperature \deleted{is often included as a covariate in
+	species distribution models, but was found not to contribute to the
+	variance in the first factor values} (Figure S6, no correlations found
+for either encounter probability or positive density).
 
-\subsection{Three clusters of species show similar spatial patterns} \replaced[id = coilin]{To}{In order to}
-gain greater insight into the community dynamics we considered how
-species-groups covary in space and time through among species-group
-correlations. Pearson correlation coefficients for the modelled average spatial
-encounter probability (Figure 3a) show clear strong associations between adult
-and juvenile size classes for all species (\textgreater 0.75 for all species
-except hake, 0.56).  Among species-groups, hierarchical clustering identified
-the same three common groups as our visual inspection of factor loadings above,
-with roundfish (cod, haddock, whiting) \deleted{closely grouped in their association,
-with correlations for adult cod with adult haddock and adult whiting of 0.73
-and 0.5 respectively, while adult haddock with adult whiting was 0.63 (Figure
-3a).}, flatfish (plaice and sole) \deleted{are also strongly correlated with adult plaice
-and sole having a coefficient of 0.75.  The final group are principally the}
-and species found in the deeper waters (hake, megrim and both anglerfish species)
-\deleted{with the megrim strongly associated with the budegassa anglerfish species
-(0.88). Negative relationships were found between plaice, sole and the monkfish
-species (-0.27, -0.26 for the adult size class with budegassa adults
-respectively) and hake (-0.33, -0.37) (Figure 3a)} showing strong intra-group
-correlations indicating spatial separation
-in distributions. This confirms the associations among species seen in the
-factor loadings, with three distinct species-group assemblages being present.
-This is also evident in correlation coefficients for the average positive
-density, with strong associations among the roundfish (Figure 3b) \deleted{show
-fewer significant positive or negative relationships among species-groups then
-for encounter probability, but still evident are the strong association among
-the roundfish with higher catches of cod are associated with higher catches of
-haddock (0.58) and whiting (0.47), as well as the two anglerfish species (0.71
-for piscatorius and 0.44 for budegassa) and hake (0.73). Similarly, plaice and
-sole are closely associated (0.31) and higher catches of one would expect to
-see higher catches of the other, but also higher catches of some juvenile size
-classes of roundfish (whiting and haddock) and anglerfish species. Negative
-association of juvenile megrim, anglerfish (budegassa) and hake with adult sole
-(-0.61, -0.61 and -0.47 respectively), plaice (-0.36 and -0.35 for megrim and
-hake only) indicate high catches of one can predict low catches of the other
-successfully.}
+\subsection{Three clusters of species show similar spatial patterns}
+\replaced[id = coilin]{To}{In order to} gain greater insight into the community
+dynamics we considered how species covary in space and time through among
+species correlations. Pearson correlation coefficients for the modelled average
+spatial encounter probability (Figure 3a) show clear strong associations
+between adult and juvenile size classes for all species (\textgreater 0.75 for
+all species except hake, 0.56).  \deleted{Among species-groups,} Hierarchical
+clustering identified the same three common groups as our visual inspection of
+factor loadings above, with roundfish (cod, haddock, whiting) \deleted{closely
+	grouped in their association, with correlations for adult cod with
+	adult haddock and adult whiting of 0.73 and 0.5 respectively, while
+	adult haddock with adult whiting was 0.63 (Figure 3a).}, flatfish
+(plaice and sole) \deleted{are also strongly correlated with adult plaice and
+	sole having a coefficient of 0.75.  The final group are principally
+	the} and species found in the deeper waters (hake, megrim and both
+anglerfish species) \deleted{with the megrim strongly associated with the
+	budegassa anglerfish species (0.88). Negative relationships were found
+	between plaice, sole and the monkfish species (-0.27, -0.26 for the
+	adult size class with budegassa adults respectively) and hake (-0.33,
+	-0.37) (Figure 3a)} showing strong intra-group correlations indicating
+spatial separation in distributions. This confirms the associations among
+species seen in the factor loadings, with three distinct species-group
+assemblages being present.  This is also evident in correlation coefficients
+for the average positive density, with strong associations among the roundfish
+(Figure 3b) \deleted{show fewer significant positive or negative relationships
+	among species than for encounter probability, but still evident
+	are the strong association among the roundfish with higher catches of
+	cod are associated with higher catches of haddock (0.58) and whiting
+	(0.47), as well as the two anglerfish species (0.71 for piscatorius and
+	0.44 for budegassa) and hake (0.73). Similarly, plaice and sole are
+	closely associated (0.31) and higher catches of one would expect to see
+	higher catches of the other, but also higher catches of some juvenile
+	size classes of roundfish (whiting and haddock) and anglerfish species.
+	Negative association of juvenile megrim, anglerfish (budegassa) and
+	hake with adult sole (-0.61, -0.61 and -0.47 respectively), plaice
+	(-0.36 and -0.35 for megrim and hake only) indicate high catches of one
+	can predict low catches of the other successfully.}
 
 \deleted{In addition to the average spatial correlations, we also estimate
-spatiotemporal correlations. Spatial population correlations (representing the
-average correlations between pairs for species-group \textit{x} and species
-group \textit{y} across all years) are linearly associated with the
-spatiotemporal population correlations (representing how correlations between
-species-group \textit{x} and species-group \textit{y} change from year to
-year), indicating generally predictable relationships between species-groups
-from one year to the next. This suggests that a positive or negative
-association between two species-groups is likely be persist from one year to
-the next, and that species-groups are consistently associated with each other
-in the catch. The correlation coefficients were 0.59 (0.52 - 0.66) and 0.47
-(0.38 - 0.55) for encounter probability and positive density respectively.
-However, a linear regression between the spatial correlations and the
-spatio-temporal correlations shows high variance (R\textsuperscript{2} = 0.36
-and 0.22 respectively), indicating that the scale of these relationships does
-change from one-year to the next. This would have implications for the
-predictability of the relationship between catches of one species-group and
-another when trying to balance catch with quotas in mixed fisheries. It can
-also be seen in the spatial factor maps that there are subtle differences in
-spatial patterns in factor loading values from one year to the next (Figures S4
-and S5) indicating changes may be driven by temporally changing environmental
-factors and species behaviour.}
+	spatiotemporal correlations. Spatial population correlations
+	(representing the average correlations between pairs for species
+	\textit{x} and species \textit{y} across all years) are linearly
+	associated with the spatiotemporal population correlations
+	(representing how correlations between species \textit{x} and species
+	\textit{y} change from year to year), indicating generally predictable
+	relationships between species from one year to the next. This suggests
+	that a positive or negative association between two species is
+	likely be persist from one year to the next, and that species are consistently associated with each other in the catch. The
+	correlation coefficients were 0.59 (0.52 - 0.66) and 0.47 (0.38 - 0.55)
+	for encounter probability and positive density respectively.  However,
+	a linear regression between the spatial correlations and the
+	spatio-temporal correlations shows high variance (R\textsuperscript{2}
+	= 0.36 and 0.22 respectively), indicating that the scale of these
+	relationships does change from one-year to the next. This would have
+	implications for the predictability of the relationship between catches
+	of one species and another when trying to balance catch with
+	quotas in mixed fisheries. It can also be seen in the spatial factor
+	maps that there are subtle differences in spatial patterns in factor
+	loading values from one year to the next (Figures S4 and S5) indicating
+	changes may be driven by temporally changing environmental factors and
+	species behaviour.}
 
 
 \subsection{Subtle differences in distributions may be important to separate
-	catches within groups \deleted[id = coilin]{under the landing obligation}}: \deleted[id = coilin]{The analysis shows
-the interdependence within species-groups of roundfish, flatfish and deeper
-water species, where catching one species within the group indicates a high
-probability of catching the other species, which has important implications for
-how spatial avoidance can be used to support implementation of the EU's
-landings obligation. }If production from mixed fisheries is to be maximised,
-decoupling catches of species between and within the groups will be key. For
-example, asking where the maximal separation in the densities of two coupled
-species is likely to occur? To address this requirement, we map the difference
-in spatial distribution within a group for each pair of species within a
-species-groupings for a single year (2015; Figure 4). \added[id = coilin]{MAYBE PICK HADDOCK AND WHITING AS A QUICK REALLY IMPORTANT EXAMPLE?}
+	catches within groups \deleted[id = coilin]{under the landing
+		obligation}}: \deleted[id = coilin]{The analysis shows the
+	interdependence within the species-groups of roundfish, flatfish and
+	deeper water species, where catching one species within the group
+	indicates a high probability of catching the other species, which has
+	important implications for how spatial avoidance can be used to support
+	implementation of the EU's landings obligation. }If production from
+mixed fisheries is to be maximised, decoupling catches of species between and
+within the groups will be key. For example, asking where the maximal separation
+in the densities of two coupled species is likely to occur? To address this
+requirement, we map the difference in spatial distribution \deleted{within a
+	group} for each pair of species within a species-group for a single
+year (2015; Figure 4). This would facilitate discussion on maximal separation,
+for example, between difficult to separate species such as haddock and whiting
+(Figure 4c).
 
 \deleted{Cod had a more north-westerly distribution than
 haddock, while cod was more westerly distributed than whiting roughly
@@ -390,7 +400,7 @@ concentrated in an area between 51 and 52 $^{\circ}$ N and 5 and 7 $^{\circ}$
 W, which can be seen by comparing the whiting distribution with both cod
 (Figure 4b) and haddock (Figure 4c). For the deeper water species (Figures 4d
 and 4e), hake are more densely distributed in two areas compared to
-anglerfishes %\footnote{two species combined as they are managed as one} and
+anglerfishes and %\footnote{two species combined as they are managed as one} and
 megrim (though megrim has a stable density across the modelled area as
 indicated by the large amount of white space). For anglerfishes and megrim
 (Figure 4f), anglerfishes have a more easterly distribution than megrim. For
@@ -417,7 +427,7 @@ in location `C', reflecting its relative abundance in the area.
 
 \subsection{Addressing the scientific challenges of the landing obligation in
 	mixed fisheries} \deleted{In application to the Celtic Sea} We have
-identified spatial separation of three distinct species-groupings (roundfish,
+identified spatial separation of three distinct species-groups (roundfish,
 flatfish and deeper water species) while showing that only subtle differences
 exist in distributions within species-groups. The differences in catch
 compositions between gears at the same location (Figure 4h) show that changing
@@ -509,10 +519,10 @@ single-species distribution in space and time.
 VAST\footnote{Software in the R statistical programming language can be found
 	here: \url{www.github.com/james-thorson/VAST}} implements a
 delta-generalised linear mixed modelling (GLMM) framework that takes account of
-spatio-temporal correlations among species-groups through implementation of a
+spatio-temporal correlations among species through implementation of a
 spatial dynamic factor analysis (SDFA). Spatial variation is captured through a
 Gaussian Markov Random Field, while we model random variation among
-species-groups and years. Covariates affecting catchability (to account for
+species and years. Covariates affecting catchability (to account for
 differences between fishing surveys) and density (to account for environmental
 preferences) can be incorporated for predictions of presence and positive
 density. The following briefly summarises the key methods implemented in the
@@ -521,10 +531,10 @@ Thorson \textit{et al} 2017 \cite{Thorson2017}.
 
 \textbf{\textit{SDFA:}} A spatial dynamic factor analysis incorporates advances
 in joint dynamic species models \cite{Thorson2017} to take account of
-associations among species-groups by modelling response variables as a
+associations among species by modelling response variables as a
 multivariate process. This is achieved through implementing a factor analysis
 decomposition where common latent trends are estimated so that the number of
-common trends is less than the number of species-groups modelled. The factor
+common trends is less than the number of species modelled. The factor
 coefficients are then associated through a function for each factor that
 returns a positive or negative association of one or more species with any
 location. Log-density of any species is then be described as a linear
@@ -543,7 +553,7 @@ time \cite{Thorson2016b}.
 The factor analysis can identify community dynamics and where species have
 similar spatio-temporal patterns, allowing inference of species distributions
 and abundance of poorly sampled species through association with other species
-and allows for computation of spatio-temporal correlations among species-groups
+and allows for computation of spatio-temporal correlations among species
 \cite{Thorson2016b}.
 
 \textbf{\textit{Estimation of abundances:}} Spatio-temporal encounter
@@ -572,18 +582,17 @@ and positive catch rates modelling using a gamma- distribution \cite{Thorson2015
 		\end{equation}
 
 where $p(s_{i}, c_{i}, t_{i})$ is the predictor for encounter probability for
-observation $i$, at location $s$ for species-group $c$ and time $t$ and
-$r(s_{i}, c_{i}, t_{i})$ is similarly the predictor for the positive density.
+observation $i$, at location $s$ for species $c$ and time $t$ and $r(s_{i},
+c_{i}, t_{i})$ is similarly the predictor for the positive density.
 $\beta_{*}(c_{i},t_{i})$ is the intercept, $\omega_{*}(s_{i},c_{i})$ the
 spatial variation at location $s$ for factor $f$, with $L_{\omega}(c_{i},f)$
-the loading matrix for spatial covariation among species-groups.
+the loading matrix for spatial covariation among species.
 $\varepsilon_{*}(s_{i},c_{i},t_{i})$ is the linear predictor for
 spatio-temporal variation, with $L_{\varepsilon}(c_{i}, f)$ the loading matrix
-for spatio-temporal covariance among species-groups and $\delta_{*}(c_{i},
-v_{i})$ the contribution of catchability covariates for the linear predictor
-with $Q_{c_{i}, v_{i}}$ the catchability covariates for species-group $c$ and
-vessel $v$;  $*$ can be either $p$ for probability of encounter or $r$ for
-positive density.
+for spatio-temporal covariance among species and $\delta_{*}(c_{i}, v_{i})$ the
+contribution of catchability covariates for the linear predictor with
+$Q_{c_{i}, v_{i}}$ the catchability covariates for species $c$ and vessel $v$;
+$*$ can be either $p$ for probability of encounter or $r$ for positive density.
 
 The Delta-Gamma formulation is then:
 \begin{equation}
@@ -607,7 +616,7 @@ covariance where the correlations were stronger in a north-east - south-west
 direction, extending approximately 97 km and 140 km before correlations for
 encounter probability and positive density reduced to \textless 10 \%,
 respectively (Figure S9).  Incorporating the spatiotemporal correlations among
-and within species-groups provides more efficient use of the data as inference
+and within species provides more efficient use of the data as inference
 can be made about poorly sampled locations from the covariance structure.
 
 A probability distribution for spatio-temporal variation in both encounter
@@ -619,22 +628,20 @@ with a three-dimensional multivariate normal distribution so that:
 	\end{equation}
 
 Here, $vec[\mathbf{E}_{*}(t)]$ is the stacked columns of the matrices
-describing $\varepsilon{*}(s,p,t)$ at every location, species-group and time,
+describing $\varepsilon{*}(s,p,t)$ at every location, species and time,
 $\mathbf{R}_{*}$ is a correlation matrix for encounter probability or positive
 catch rates among locations and $\mathbf{V}_{*}$ a covariance matrix for
-encounter probability or positive catch rate among species-groups (modelled
-within the factor analysis). $\otimes$ represents the Kronecker product so that
-the correlation among any location and species-group can be computed
-\cite{Thorson2017}.
+encounter probability or positive catch rate among species (modelled within the
+factor analysis). $\otimes$ represents the Kronecker product so that the
+correlation among any location and species can be computed \cite{Thorson2017}.
 		
 \textbf{\textit{Incorporating covariates}} Survey catchability (the relative
-efficiency of a gear catching a species-group) was estimated as a fixed effect
-in the model, $\delta_{s}(v)$, to account for differences in spatial fishing
-patterns and gear characteristics which affect encounter and capture
-probability of the sampling gear \cite{Thorson2014}. Parameter estimates
-(Figure S10) showed clear differential effects of surveys using otter trawl
-gears (more effective for round fish species) and beam trawl gears (more
-effective for flatfish species).
+efficiency of a gear catching a species) was estimated as a fixed effect in the
+model, $\delta_{s}(v)$, to account for differences in spatial fishing patterns
+and gear characteristics which affect encounter and capture probability of the
+sampling gear \cite{Thorson2014}. Parameter estimates (Figure S10) showed clear
+differential effects of surveys using otter trawl gears (more effective for
+round fish species) and beam trawl gears (more effective for flatfish species).
 
 No fixed covariates for habitat quality or other predictors of encounter
 probability or positive density were included. While incorporation may improve
@@ -653,7 +660,7 @@ support by the Irish Centre for High End Computing (ICHEC;
 \subsection{Data}
 
 The model integrates data from seven fisheries independent surveys taking
-account of correlations among species-group spatio-temporal distributions and
+account of correlations among species spatio-temporal distributions and
 abundances to predict spatial density estimates consistent with the resolution
 of the data. 
 
@@ -677,7 +684,7 @@ length and weight of fish obtained in the EVHOE survey and aggregated within
 size classes (adult and juvenile). 
 
 The final dataset comprised of estimates of catches (including zeros) for each
-station and species-group and estimated swept area for the tow.
+station and species and estimated swept area for the tow.
 
 \subsection{Model setup}
 
@@ -757,7 +764,7 @@ and time.
 	\label{fig:1}
 	\caption{Factor values for the first three factors for (a) Average
 		encounter probability and (b) Average positive density for the
-		species-groups (outer figures) and spatially (inner figures).
+		species (outer figures) and spatially (inner figures).
 		Red: positive association to the factor, Blue: negative
 		association}
 \end{center}
@@ -769,7 +776,7 @@ and time.
 \begin{center}
 	\includegraphics[width=\linewidth]{"figures/Figure 3 - PCAstyle_Plots_SpatioTemp"}
 	\label{fig:2}
-	\caption{Position of each species-group on the first two axes from the
+	\caption{Position of each species on the first two axes from the
 		factor analysis for (a) spatio-temporal encounter probability
 		and (b) spatio-temporal positive density.}
 \end{center}
@@ -781,7 +788,7 @@ and time.
 	\label{fig:3}
 	\caption{Inter-species correlations for (a) spatial encounter
 		probability over all years and (b) spatial positive density.
-		Species-groups are clustered into three groups based on a
+		Species are clustered into three groups based on a
 		hierarchical clustering method with non-significant
 		correlations (the Confidence Interval [+- 1.96 * SEs] spanned
 		zero) left blank.}
