--- a/docs/write_up/JDM_mixed_fishery_letterRemoved.tex
+++ b/docs/write_up/JDM_mixed_fishery_letterRemoved.tex
@@ -4,13 +4,15 @@
 \documentclass{nature}
 \usepackage[margin=1in]{geometry} % Required to make the margins smaller to fit
 % more content on each page 
-%\usepackage{lineno} % add some line nos to aid reading
+\usepackage{lineno} % add some line nos to aid reading
 \usepackage[utf8]{inputenc}
 \usepackage{enumitem}
 \usepackage[hyphens]{url} % for breaking url's in the bib
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[]{changes}
+\definechangesauthor[color = red]{coilin}
+\definechangesauthor[color = blue]{Paul}
 % cite is loaded from nature class
 \setlist{itemsep=1pt} % This controls spacing between items in the lists
 \setlength\parindent{0pt} % Removes all indentation from paragraphs
@@ -19,7 +21,7 @@
 \renewcommand{\familydefault}{\sfdefault}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{Working title: Spatial separation of catches in highly mixed fisheries}
+\title{Spatial separation of catches in highly mixed fisheries}
 
 \author{Paul J. Dolder$^{1,2}$ \& James T. Thorson$^3$ \& Cóilín Minto$^1$}
 
@@ -37,30 +39,41 @@
 \end{affiliations}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\begin{linenumbers}
+\begin{linenumbers}
 
 \begin{abstract} 
-Overexploitation of fish populations occurs when catches continue in fisheries
-pursuing a mix of species and low quota species are discarded. As EU fisheries
-management moves to count all fish caught against quota (the `Landings
-obligation'), the challenge is to catch available quota within new constraints,
-else lose productivity.  
-
+%% based on: https://www.nature.com/nature/authors/gta/2c_Summary_para.pdf
+%% Basic introduction 
+Mixed fisheries capture a mix of species at the same time and are a dominant
+type of fishery worldwide.  Overexploitation in mixed fisheries occurs when
+catches continue for available quota species while low quota species are
+discarded. As EU fisheries management moves to count all fish caught against
+quota (the `landings obligation'), the challenge is to catch available quota
+within new constraints, else lose productivity.  
+%% More detailed background
 A mechanism for decoupling exploitation of species caught together is spatial
-targeting, but this remains challenging due to complex fishery dynamics and a
-lack of understanding of spatiotemporal community dynamics. We develop
-a framework based on joint species distribution modelling (spatial dynamic factor
-analysis) to understand how spatial community and fishery dynamics interact to
-determine species and size composition in the example of the highly mixed
-fisheries of the Celtic Sea.  Clear common spatial patterns emerge for three
-distinct species-groups and, while distribution varies inter-annually, the same
-species-groups are consistently found in higher densities together, with more
-subtle differences within species-groups. 
-
+targeting, but this remains challenging due to complex fishery and population
+dynamics in space and time. 
+%% General problem
+How far spatial targeting can go to practically separate species is often
+unknown and anecdotal.
+%% Summarising the main result
+Here we develop a dimension-reduction framework based on joint species
+distribution modelling (spatial dynamic factor analysis) to understand how
+spatial community and fishery dynamics interact to determine species and size
+composition.  
+%%	 Two or three sentences explaining what the main result
+In the example application to the highly mixed fisheries of the Celtic Sea,
+clear common spatial patterns emerge for three distinct species-groups and,
+while distribution varies inter-annually, the same species-groups are
+consistently found in higher densities together, with more subtle differences
+within species-groups - where spatial separation may not be practically
+possible. 
+%%  general context
 We highlight the importance of dimension reduction techniques to focus
 management discussion on axes of maximal separation in space and time. We
 propose that spatiotemporal modelling of available data is a scientific
-requirement to address the pervasive and nuanced challenges of managing mixed
+necessity to address the pervasive and nuanced challenges of managing mixed
 fisheries.  
 \end{abstract}
 
@@ -75,7 +88,8 @@ population sizes and allow increased sustainable catches, yet fisheries catch
 globally remains stagnant . In light of projected
 increased demand for fish protein  there is an
 important role for well managed fisheries in supporting future food security
-\cite{Mcclanahan2015} and  remains a need to ensure fisheries
+\cite{Mcclanahan2015}  
+necessitating that fisheries
 are managed efficiently to maximise productivity.
 
 A particular challenge in realising increased catches from rebuilt populations
@@ -87,47 +101,44 @@ vessel must stop fishing when the first quota is reached (the `choke' species)
 or overexploitation of the weaker species occurs while fishers continue to
 catch more healthy species and throw back (`discard') the fish for which they
 have no quota \cite{Batsleer2015}. There is a pressing need
-for scientific tools which simplify the complexities of mixed fisheries to help
-managers and fishers maximise catches. 
+for scientific tools which simplify the complexities of mixed fisheries to help 
+avoid discarding. 
 
 Sustainability of European fisheries has been hampered by this `mixed fishery
 problem' for decades with large-scale discarding resulting \cite{Uhlmann2014}.
  Under the EU Common Fisheries
 Policy (CFP) reform of 2012 , by 2019 all fish that are caught are due to be
-counted against the respective stock quota, expected to contribute to attainment of the goal of Good
-Environmental Status (GES) under the European Marine Strategy Framework
-Directive (MSFD; \cite{EuropeanParliament2008}) and move Europe towards an
-ecosystem based approach to fisheries management \cite{Garcia2003}. 
+counted against the respective stock quota. 
 
- Individual fishers goals to maximise
-utility; whether that be profit, income or the continuance of traditional
-practices.   Unless fishers can avoid catch of
-unwanted species they will have to stop fishing when reaching their first
-restrictive quota. This introduces a potential significant cost to fishers of
-under-utilised quota\cite{Ulrich2016} and provides a strong
-incentive to mitigate such losses \cite{Condie2013}. The ability
-of fishers to align their catch with available quota depends on being able to
-exploit target species while avoiding unwanted catch, either by switching
-fishing method (e.g.  trawling to netting), changing technical gear
-characteristics (e.g.  introducing escapement panels in nets), or the timing
-and location of fishing activity \cite{vanPutten2012a}. For
-example, otter trawl gears are known to have higher catch rates of roundfish
-due to the higher headline and wider sweeps which herd demersal fish into the
-net while beam trawls employ chain mesh to 'dig' benthic flatfish species from
-the seabed\cite{Fraser2008}.
+ Individual fishers goals are to maximise utility; whether that be profit, income or the
+continuance of traditional ractices.   Unless
+fishers can avoid catch of unwanted species they will have to stop fishing when
+reaching their first restrictive quota. This introduces a potential significant
+cost to fishers of under-utilised quota\cite{Ulrich2016} and provides a strong
+incentive to mitigate such losses\cite{Condie2013}. The ability of fishers to
+align their catch with available quota depends on being able to exploit target
+species while avoiding unwanted catch, either by switching fishing
+method (e.g.  trawling to netting), changing technical gear characteristics
+(e.g.  introducing escapement panels in nets), or the timing and location of
+fishing activity\cite{vanPutten2012a}. For example, otter trawl gears are known
+to have higher catch rates of roundfish due to the higher headline and wider
+sweeps which herd demersal fish into the net while beam trawls employ chain
+mesh to lift benthic flatfish species from the
+seabed\cite{Fraser2008}.
 
 Spatiotemporal management measures  have been applied to reduce unwanted catch with varying
-degrees of success (e.g.  \cite{Needle2011, Dunn2014a}.  However, such measures
-have  been targeted at individual species without considering
-associations and interactions among several species. Highly mixed fisheries are
-complex with spatial, technological and community interactions combining.
-.  Our goal is to develop a framework
-for understanding these complexities. We do so by implementing a
-spatio-temporal dimension reduction method and use the results to draw
-inference on the fishery-community dynamics, creating a framework to identify
-trends common among species-groups. We use this to describe where spatial
-measures can contribute to mitigating unwanted catches in highly mixed
-fisheries.
+degrees of success (e.g.\cite{Needle2011, Dunn2014a}).  However, such measures
+have  been targeted at individual species without
+considering associations and interactions among several species. Highly mixed
+fisheries are complex with spatial, technological and community interactions
+combining.  .  Our goal is to
+develop a framework for understanding these complexities. We do so by
+implementing a spatio-temporal dimension reduction method and use the results
+to draw inference on the fishery-community dynamics, creating a framework to
+identify trends common among species. We use this to describe
+the potential for and limitations of spatial
+measures to mitigate
+unwanted catches in highly mixed fisheries.
 
 
 \subsection{Framework for analysing spatio-temporal mixed fisheries
@@ -140,11 +151,11 @@ implement a factor analysis decomposition to describe trends in spatiotemporal
 dynamics of the different species as a function of latent variables
 \cite{Thorson2015} representing spatial variation (9 factors;  'average' spatial variation) and spatio-temporal variation (9
 factors) for encounter probability and positive catch rates ( 'positive density') separately \cite{Thorson2015a}.   The resultant factor analysis is used to identify community
-dynamics and drivers common among 18 species-groups and results presented
+dynamics and drivers common among 18 species and results presented
 through  PCA rotation. By
-describing the species-groups dynamics through underlying contributory
+describing the species dynamics through underlying contributory
 spatiotemporal factors we can take account of how the factors contribute to
-affect catches of the species-groups in mixed fisheries.  Gaussian
+affect catches of the species in mixed fisheries.  Gaussian
 Markov Random Fields (GMRFs)  capture spatial and temporal dependence
 within and among species groups for both encounter probability and positive
 density\cite{Thorson2013}.  Fixed effects  account for systematic differences driving
@@ -169,31 +180,27 @@ area (average 2011 - 2015;\cite{STECF2017}). Each species was separated into
 juvenile and adult size classes based on their legal minimum conservation
 reference size (Table S2).
 
-We analyse the data to understand how the different associations among emergent
-species-groups (combination of species and size class) and their potential
-drivers affect catch compositions in mixed fisheries. We consider how these
-have changed over time, and the implications for mixed fisheries in managing
-catches of quota species under the EU landing obligation.
+
 
 \subsection{Common average spatial patterns driving species associations} A
 spatial dynamic factor analysis decomposes the dominant spatial patterns
 driving differences in encounter probability and positive density. The first
-three factors  account for 83.7 \% of the between
-species-group variance in average encounter probability and 69 \% of the
-between species-group variance in average positive density. A clear spatial
+three factors  account for 83.7\% of the between
+species variance in average encounter probability and 69\% of the
+between species variance in average positive density. A clear spatial
 pattern can been seen both for encounter probability and positive density, with
 a positive value associated with the first factor in the inshore north easterly
 part of the Celtic Sea into the Bristol Channel and Western English Channel,
 moving to a negative value offshore in the south-westerly waters (Figure 1).
-The species-group loadings coefficients show plaice, sole and whiting to be
+The species loadings coefficients show plaice, sole and whiting to be
 positively associated with the first factor for encounter probability while the
-other species-groups are negatively associated. For average positive density,
+other species are negatively associated. For average positive density,
 positive associations are also found for haddock and juvenile cod.  
 
 On the second spatial factor for encounter probability a north / south split
 can be seen at approximately 49$^{\circ}$ N while positive density is more
 driven by a positive value in the deeper westerly waters as well as some
-inshore areas. Species-group values for the second factor indicate there are
+inshore areas. Species values for the second factor indicate there are
 positive associations for juvenile monkfish (\emph{L. piscatorius}), juvenile
 hake, juvenile megrim, plaice and juvenile whiting with average positive
 density, which may reflect two different spatial distributions in the more
@@ -204,7 +211,7 @@ for encounter probability and negative with the westerly waters. This
  splits the
 roundfish species cod, haddock and whiting which all have a positive
 association with the third factor for average encounter probability from the
-rest of the species-groups .
+rest of the species .
 Positive density is driven by a north / south split (Figure 1), with positive
 values in the northerly areas. Juvenile monkfish (\emph{L.  budgessa} and
 \emph{L. piscatorius}), cod, juvenile haddock, hake, adult plaice and whiting
@@ -222,94 +229,89 @@ substrate type, with the majority (86 \%) of the variance explained by depth
 
 It is clear that depth and to a lesser extent substrate are important
 predictors for the main driver of similarities and differences in distributions
-and abundances for the different species-groups. , as
+and abundances for the different species. , as
 identified in other marine species distribution models \cite{Robinson2011}; the
 advantage to the approach taken here is that, where such data is unavailable at
 appropriate spatial resolution, the spatial factor analysis can adequately
 characterise these influences on species spatial dynamics.
 
-\subsection{Changes in spatial patterns over time, but stability in species
-	dynamics}  The inter-annual
-differences in factor coefficients show less structure (Figures S5, S6). These
-inter-annual differences are important as they reflect the ability of fishers
-to predict where they can target species from one year to the next, without
-which it may be difficult to avoid unwanted catch. There were, however,
- common patterns in
-spatiotemporal factor coefficients among species-groups  (Figure 2).  The same factors  drive
-spatiotemporal distributions of megrim, anglerfish species and hake (the deeper
-water species, species-grouping negatively associated with the second axes of
-Figure 2a) and the roundfish and flatfish (species-grouping more positively
-associated with the second axes of Figure 2a). For spatio-temporal positive
-density (Figure 2b) cod, haddock and whiting (the roundfish species) are
-separated from plaice, sole (the flatfish) and deeper water species.  From this it can be predicted that higher catches of a species
-within a group (e.g.  cod in roundfish) would be expected when catching another
-species within that group (e.g. whiting in roundfish),  suggesting
- one or more common environmental drivers are influencing the
-distributions of the species groups, and that driver differentially affects the
-species groups, but this could not be explained by temperature  (Figure
-S6, no correlations found for either encounter probability or positive
-density).
+\subsection{Time varying species distributions, but stability
+		within species groups}  The inter-annual differences in factor
+coefficients show less structure (Figures S5, S6). These inter-annual
+differences are important as they reflect the ability of fishers to predict
+where they can target species from one year to the next.  Common patterns in spatiotemporal factor coefficients
+among species   drive spatiotemporal distributions of megrim,
+anglerfish species and hake (the deeper water species, species-group
+negatively associated with the second axes of Figure 2a) and the roundfish and
+flatfish (species-group more positively associated with the second axes of
+Figure 2a). For spatio-temporal positive density (Figure 2b) cod, haddock and
+whiting (the roundfish species) are separated from plaice, sole (the flatfish)
+and deeper water species.  From this it can be predicted that
+higher catches of a species within a group (e.g.  cod in roundfish) would be
+expected when catching another species within that group (e.g. whiting in
+roundfish),  suggesting  one or more common
+environmental drivers are influencing the distributions of the species groups,
+and that driver differentially affects the species groups, but this could not
+be explained by temperature  (Figure S6, no correlations found
+for either encounter probability or positive density).
 
-\subsection{Three clusters of species show similar spatial patterns} In order to
-gain greater insight into the community dynamics we considered how
-species-groups covary in space and time through among species-group
-correlations. Pearson correlation coefficients for the modelled average spatial
-encounter probability (Figure 3a) show clear strong associations between adult
-and juvenile size classes for all species (\textgreater 0.75 for all species
-except hake, 0.56).  Among species-groups, hierarchical clustering identified
-the same three common groups as our visual inspection of factor loadings above,
-with roundfish (cod, haddock, whiting) , flatfish (plaice and sole) 
-and species found in the deeper waters (hake, megrim and both anglerfish species)
- showing strong intra-group
-correlations indicating spatial separation
-in distributions. This confirms the associations among species seen in the
-factor loadings, with three distinct species-group assemblages being present.
-This is also evident in correlation coefficients for the average positive
-density, with strong associations among the roundfish (Figure 3b) 
+\subsection{Three clusters of species show similar spatial patterns}
+To gain greater insight into the community
+dynamics we considered how species covary in space and time through among
+species correlations. Pearson correlation coefficients for the modelled average
+spatial encounter probability (Figure 3a) show clear strong associations
+between adult and juvenile size classes for all species (\textgreater 0.75 for
+all species except hake, 0.56).   Hierarchical
+clustering identified the same three common groups as our visual inspection of
+factor loadings above, with roundfish (cod, haddock, whiting) , flatfish
+(plaice and sole)  and species found in the deeper waters (hake, megrim and both
+anglerfish species)  showing strong intra-group correlations indicating
+spatial separation in distributions. This confirms the associations among
+species seen in the factor loadings, with three distinct species-group
+assemblages being present.  This is also evident in correlation coefficients
+for the average positive density, with strong associations among the roundfish
+(Figure 3b) 
 
 
 
 
 \subsection{Subtle differences in distributions may be important to separate
-	catches within groups under the landing obligation}: The analysis shows
-the interdependence within species-groups of roundfish, flatfish and deeper
-water species, where catching one species within the group indicates a high
-probability of catching the other species, which has important implications for
-how spatial avoidance can be used to support implementation of the EU's
-landings obligation. If production from mixed fisheries is to be maximised,
-decoupling catches of species between and within the groups will be key. For
-example, asking where the maximal separation in the densities of two coupled
-species is likely to occur? To address this requirement, we map the difference
-in spatial distribution within a group for each pair of species within a
-species-groupings for a single year (2015; Figure 4). 
+	catches within groups }: If production from
+mixed fisheries is to be maximised, decoupling catches of species between and
+within the groups will be key. For example, asking where the maximal separation
+in the densities of two coupled species is likely to occur? To address this
+requirement, we map the difference in spatial distribution  for each pair of species within a species-group for a single
+year (2015; Figure 4). This would facilitate discussion on maximal separation,
+for example, between difficult to separate species such as haddock and whiting
+(Figure 4c).
 
 
 
 Predicted catch distribution from a ``typical'' otter trawl gear and beam trawl
 fishing at three different locations highlights the differences fishing gear
-and location makes on catches (Figure 4h). . In the inshore area (location 'A') plaice and sole are
+and location makes on catches (Figure 4h). . In the inshore area (location `A') plaice and sole are
 the two main species in catch reflecting their distribution and abundance,
 though the otter trawl gear catches a greater proportion of plaice to sole than
-the beam trawl.  The area between Britain and Ireland (location 'B') has a
+the beam trawl.  The area between Britain and Ireland (location `B') has a
 greater contribution of whiting, haddock, cod, hake and anglerfishes in the
 catch with the otter trawl catching a greater proportion of the roundfish,
 haddock, whiting and cod while the beam trawl catches more anglerfishes and
 megrims. The offshore area has a higher contribution of megrim, anglerfishes
 and hake with the otter trawl catching a greater share of hake and the beam
 trawl a greater proportion of megrim. Megrim dominates the catch for both gears
-in location 'C', reflecting its relative abundance in the area.  
+in location `C', reflecting its relative abundance in the area.  
 
 \subsection{Addressing the scientific challenges of the landing obligation in
 	mixed fisheries}  We have
-identified spatial separation of three distinct species-groupings (roundfish,
+identified spatial separation of three distinct species-groups (roundfish,
 flatfish and deeper water species) while showing that only subtle differences
 exist in distributions within species-groups. The differences in catch
 compositions between gears at the same location (Figure 4h) show that changing
 fishing methods can go some way to affecting catch, yet that differences in
 catches between locations are likely to be more important. For example, beam
-trawls fishing at the inshore locations (e.g. location 'A' in Figure 4) are
+trawls fishing at the inshore locations (e.g. location `A' in Figure 4) are
 likely to predominately catch plaice and sole, yet switching to the offshore
-locations (e.g. location 'C') would likely yield greater catches of megrim and
+locations (e.g. location `C') would likely yield greater catches of megrim and
 anglerfishes.  Such changes in spatial fishing patterns are likely to play an
 important role in supporting implementation of the landings obligation.
 
@@ -343,8 +345,7 @@ An important question for the implementation of the EU's landing obligation is
 how far spatial avoidance can go to achieving catch balancing in fisheries.
 Our model captures differences between location fished for two gear types and
 their broad scale effect on catch composition.  It is
-likely this analysis reflects a lower bound on the
-utility of spatial avoidance as fine-scale behavioural decisions such as
+likely this analysis reflects a lower bound on  avoidance as fine-scale behavioural decisions such as
 time-of-day, gear configuration and location choices can also be used to affect
 catch\cite{Abbott2015, Thorson2016}. Results of empirical studies undertaken
 elsewhere\cite{Branch2008, Kuriyama2016} suggest limits to the effectiveness of
@@ -375,10 +376,10 @@ single-species distribution in space and time.
 VAST\footnote{Software in the R statistical programming language can be found
 	here: \url{www.github.com/james-thorson/VAST}} implements a
 delta-generalised linear mixed modelling (GLMM) framework that takes account of
-spatio-temporal correlations among species-groups through implementation of a
+spatio-temporal correlations among species through implementation of a
 spatial dynamic factor analysis (SDFA). Spatial variation is captured through a
 Gaussian Markov Random Field, while we model random variation among
-species-groups and years. Covariates affecting catchability (to account for
+species and years. Covariates affecting catchability (to account for
 differences between fishing surveys) and density (to account for environmental
 preferences) can be incorporated for predictions of presence and positive
 density. The following briefly summarises the key methods implemented in the
@@ -387,10 +388,10 @@ Thorson \textit{et al} 2017 \cite{Thorson2017}.
 
 \textbf{\textit{SDFA:}} A spatial dynamic factor analysis incorporates advances
 in joint dynamic species models \cite{Thorson2017} to take account of
-associations among species-groups by modelling response variables as a
+associations among species by modelling response variables as a
 multivariate process. This is achieved through implementing a factor analysis
 decomposition where common latent trends are estimated so that the number of
-common trends is less than the number of species-groups modelled. The factor
+common trends is less than the number of species modelled. The factor
 coefficients are then associated through a function for each factor that
 returns a positive or negative association of one or more species with any
 location. Log-density of any species is then be described as a linear
@@ -409,7 +410,7 @@ time \cite{Thorson2016b}.
 The factor analysis can identify community dynamics and where species have
 similar spatio-temporal patterns, allowing inference of species distributions
 and abundance of poorly sampled species through association with other species
-and allows for computation of spatio-temporal correlations among species-groups
+and allows for computation of spatio-temporal correlations among species
 \cite{Thorson2016b}.
 
 \textbf{\textit{Estimation of abundances:}} Spatio-temporal encounter
@@ -438,18 +439,17 @@ and positive catch rates modelling using a gamma- distribution \cite{Thorson2015
 		\end{equation}
 
 where $p(s_{i}, c_{i}, t_{i})$ is the predictor for encounter probability for
-observation $i$, at location $s$ for species-group $c$ and time $t$ and
-$r(s_{i}, c_{i}, t_{i})$ is similarly the predictor for the positive density.
+observation $i$, at location $s$ for species $c$ and time $t$ and $r(s_{i},
+c_{i}, t_{i})$ is similarly the predictor for the positive density.
 $\beta_{*}(c_{i},t_{i})$ is the intercept, $\omega_{*}(s_{i},c_{i})$ the
 spatial variation at location $s$ for factor $f$, with $L_{\omega}(c_{i},f)$
-the loading matrix for spatial covariation among species-groups.
+the loading matrix for spatial covariation among species.
 $\varepsilon_{*}(s_{i},c_{i},t_{i})$ is the linear predictor for
 spatio-temporal variation, with $L_{\varepsilon}(c_{i}, f)$ the loading matrix
-for spatio-temporal covariance among species-groups and $\delta_{*}(c_{i},
-v_{i})$ the contribution of catchability covariates for the linear predictor
-with $Q_{c_{i}, v_{i}}$ the catchability covariates for species-group $c$ and
-vessel $v$;  $*$ can be either $p$ for probability of encounter or $r$ for
-positive density.
+for spatio-temporal covariance among species and $\delta_{*}(c_{i}, v_{i})$ the
+contribution of catchability covariates for the linear predictor with
+$Q_{c_{i}, v_{i}}$ the catchability covariates for species $c$ and vessel $v$;
+$*$ can be either $p$ for probability of encounter or $r$ for positive density.
 
 The Delta-Gamma formulation is then:
 \begin{equation}
@@ -473,7 +473,7 @@ covariance where the correlations were stronger in a north-east - south-west
 direction, extending approximately 97 km and 140 km before correlations for
 encounter probability and positive density reduced to \textless 10 \%,
 respectively (Figure S9).  Incorporating the spatiotemporal correlations among
-and within species-groups provides more efficient use of the data as inference
+and within species provides more efficient use of the data as inference
 can be made about poorly sampled locations from the covariance structure.
 
 A probability distribution for spatio-temporal variation in both encounter
@@ -485,22 +485,20 @@ with a three-dimensional multivariate normal distribution so that:
 	\end{equation}
 
 Here, $vec[\mathbf{E}_{*}(t)]$ is the stacked columns of the matrices
-describing $\varepsilon{*}(s,p,t)$ at every location, species-group and time,
+describing $\varepsilon{*}(s,p,t)$ at every location, species and time,
 $\mathbf{R}_{*}$ is a correlation matrix for encounter probability or positive
 catch rates among locations and $\mathbf{V}_{*}$ a covariance matrix for
-encounter probability or positive catch rate among species-groups (modelled
-within the factor analysis). $\otimes$ represents the Kronecker product so that
-the correlation among any location and species-group can be computed
-\cite{Thorson2017}.
+encounter probability or positive catch rate among species (modelled within the
+factor analysis). $\otimes$ represents the Kronecker product so that the
+correlation among any location and species can be computed \cite{Thorson2017}.
 		
 \textbf{\textit{Incorporating covariates}} Survey catchability (the relative
-efficiency of a gear catching a species-group) was estimated as a fixed effect
-in the model, $\delta_{s}(v)$, to account for differences in spatial fishing
-patterns and gear characteristics which affect encounter and capture
-probability of the sampling gear \cite{Thorson2014}. Parameter estimates
-(Figure S10) showed clear differential effects of surveys using otter trawl
-gears (more effective for round fish species) and beam trawl gears (more
-effective for flatfish species).
+efficiency of a gear catching a species) was estimated as a fixed effect in the
+model, $\delta_{s}(v)$, to account for differences in spatial fishing patterns
+and gear characteristics which affect encounter and capture probability of the
+sampling gear \cite{Thorson2014}. Parameter estimates (Figure S10) showed clear
+differential effects of surveys using otter trawl gears (more effective for
+round fish species) and beam trawl gears (more effective for flatfish species).
 
 No fixed covariates for habitat quality or other predictors of encounter
 probability or positive density were included. While incorporation may improve
@@ -519,7 +517,7 @@ support by the Irish Centre for High End Computing (ICHEC;
 \subsection{Data}
 
 The model integrates data from seven fisheries independent surveys taking
-account of correlations among species-group spatio-temporal distributions and
+account of correlations among species spatio-temporal distributions and
 abundances to predict spatial density estimates consistent with the resolution
 of the data. 
 
@@ -543,7 +541,7 @@ length and weight of fish obtained in the EVHOE survey and aggregated within
 size classes (adult and juvenile). 
 
 The final dataset comprised of estimates of catches (including zeros) for each
-station and species-group and estimated swept area for the tow.
+station and species and estimated swept area for the tow.
 
 \subsection{Model setup}
 
@@ -572,11 +570,11 @@ insight into species co-occurrence and the strength of associations in space
 and time. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\end{linenumbers}
+\end{linenumbers}
 \newpage
 \Urlmuskip=0mu plus 1mu\relax
 \bibliographystyle{naturemag}
-\small{\bibliography{JSDM}}
+\small{\bibliography{../JSDM}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -619,11 +617,11 @@ and time.
 %% Figure 1 - spatial factors
 \begin{figure}
 \begin{center}
-	\includegraphics[width=\linewidth]{"Fig1_Combined"}
+	\includegraphics[width=\linewidth]{"figures/Fig1_Combined"}
 	\label{fig:1}
 	\caption{Factor values for the first three factors for (a) Average
 		encounter probability and (b) Average positive density for the
-		species-groups (outer figures) and spatially (inner figures).
+		species (outer figures) and spatially (inner figures).
 		Red: positive association to the factor, Blue: negative
 		association}
 \end{center}
@@ -633,9 +631,9 @@ and time.
 %% Figure 2 - PCA style plots
 \begin{figure}
 \begin{center}
-	\includegraphics[width=\linewidth]{"Figure 3 - PCAstyle_Plots_SpatioTemp"}
+	\includegraphics[width=\linewidth]{"figures/Figure 3 - PCAstyle_Plots_SpatioTemp"}
 	\label{fig:2}
-	\caption{Position of each species-group on the first two axes from the
+	\caption{Position of each species on the first two axes from the
 		factor analysis for (a) spatio-temporal encounter probability
 		and (b) spatio-temporal positive density.}
 \end{center}
@@ -643,11 +641,11 @@ and time.
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width = \linewidth]{"Figure 1 - Omega1Omega2_Correlations_blank"}
+	\includegraphics[width = \linewidth]{"figures/Figure 1 - Omega1Omega2_Correlations_blank"}
 	\label{fig:3}
 	\caption{Inter-species correlations for (a) spatial encounter
 		probability over all years and (b) spatial positive density.
-		Species-groups are clustered into three groups based on a
+		Species are clustered into three groups based on a
 		hierarchical clustering method with non-significant
 		correlations (the Confidence Interval [+- 1.96 * SEs] spanned
 		zero) left blank.}
@@ -656,7 +654,7 @@ and time.
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width = \linewidth]{"Figure 4 - DensityDifferencesFigureswithCC"}
+	\includegraphics[width = \linewidth]{"figures/Figure 4 - DensityDifferencesFigureswithCC"}
 	\label{fig:4}
 	\caption{Differences in the standardised spatial density for pairs of
 		species and expected catch rates for two different gears at
